--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,23 @@ services:
             - "8888:80"
         links: 
             - mongodb
+        deploy:
+            resources:
+                reservations:
+                    devices:
+                    - capabilities: [gpu]
+          
         restart: always
         
     mongodb:
-        image : mongo
+        image : mongo:latest
         hostname: mongodb
         environment:
             - MONGO_INITDB_DATABASE=image_db
             - MONGO_INITDB_ROOT_USERNAME=root
             - MONGO_INITDB_ROOT_PASSWORD=pass
-        ports:
-            - 27017:27017
         volumes:
             - ./mongodb/init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
+        ports:
+            - 27017:27017
         restart: always
-    
